--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
  <parent>
     <groupId>com.apicatalog</groupId>
     <artifactId>ed25519</artifactId>
-    <version>0.8.1-SNAPSHOT</version>
+    <version>0.8.1</version>
     <relativePath>pom_parent.xml</relativePath>
   </parent>
 
   <artifactId>iron-ed25519-cryptosuite-2020</artifactId>
   <packaging>jar</packaging>
 
-  <name>Iron Ed25519 Signature Suite 2020</name>
+  <name>Iron Ed25519 Signature Suite 2020 (JRE17)</name>
 
   <url>https://github.com/filip26/iron-ed25519-cryptosuite-2020</url>
 
@@ -27,7 +27,7 @@
     <maven.compiler.target>17</maven.compiler.target>
     <maven.compiler.source>17</maven.compiler.source>
     <envSources>src/main/java17</envSources>
-    <iron.version>0.8.1-SNAPSHOT</iron.version>
+    <iron.version>0.8.1</iron.version>
   </properties>
 
   <dependencies>
