--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
  <parent>
     <groupId>com.apicatalog</groupId>
     <artifactId>ed25519</artifactId>
-    <version>0.8.1</version>
+    <version>0.9.0</version>
     <relativePath>pom_parent.xml</relativePath>
   </parent>
 
@@ -27,7 +27,7 @@
     <maven.compiler.target>17</maven.compiler.target>
     <maven.compiler.source>17</maven.compiler.source>
     <envSources>src/main/java17</envSources>
-    <iron.version>0.8.1</iron.version>
+    <iron.version>0.9.0-SNAPSHOT</iron.version>
   </properties>
 
   <dependencies>
