--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
         <envSources>src/main/java17</envSources>
-        <iron.version>0.11.0-SNAPSHOT</iron.version>
+        <iron.version>0.11.0</iron.version>
     </properties>
 
     <dependencies>
