--- a/pom.xml
+++ b/pom.xml
@@ -5,32 +5,66 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.apicatalog</groupId>
-        <artifactId>ed25519</artifactId>
-        <version>0.14.0</version>
-        <relativePath>pom_parent.xml</relativePath>
-    </parent>
+    <groupId>com.apicatalog</groupId>
+    <artifactId>iron-ed25519-signature-2020</artifactId>
+    <version>0.15.0-SNAPSHOT</version>
 
-    <artifactId>iron-ed25519-cryptosuite-2020</artifactId>
     <packaging>jar</packaging>
 
-    <name>Iron Ed25519 Signature Suite 2020 (JRE17)</name>
+    <name>Iron Ed25519 Signature 2020 Cryptosuite</name>
 
-    <url>https://github.com/filip26/iron-ed25519-cryptosuite-2020</url>
+    <description>
+        An implementation of the W3C Verifiable Credentials Ed25519Signature2020
+        Cryptosuite in Java
+    </description>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>http://apache.org/licenses/LICENSE-2.0</url>
+        </license>
+    </licenses>
+
+    <issueManagement>
+        <system>github</system>
+        <url>https://github.com/filip26/iron-ed25519-signature-2020/issues</url>
+    </issueManagement>
+
+    <url>https://github.com/filip26/iron-ed25519-signature-2020</url>
 
     <scm>
         <connection>
-            scm:git:git://github.com/filip26/iron-ed25519-cryptosuite-2020.git</connection>
+            scm:git:git://github.com/filip26/iron-ed25519-signature-2020.git</connection>
         <developerConnection>
-            scm:git:git://github.com/filip26/iron-ed25519-cryptosuite-2020.git</developerConnection>
-        <url>https://github.com/filip26/iron-ed25519-cryptosuite-2020/tree/main</url>
+            scm:git:git://github.com/filip26/iron-ed25519-signature-2020.git</developerConnection>
+        <url>https://github.com/filip26/iron-ed25519-signature-2020/tree/main</url>
     </scm>
 
+    <developers>
+        <developer>
+            <id>filip26</id>
+            <name>Filip Kolarik</name>
+            <email>filip26@gmail.com</email>
+            <roles>
+                <role>author</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <inceptionYear>2022</inceptionYear>
+
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <argLine>-Dfile.encoding=UTF-8</argLine>
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
         <envSources>src/main/java17</envSources>
+        <iron.version>0.14.0</iron.version>
+        <jakarta.json.version>2.0.1</jakarta.json.version>
+        <!-- test resources -->
+        <junit.version>5.10.2</junit.version>
+
     </properties>
 
     <dependencies>
@@ -40,6 +74,138 @@
             <version>${iron.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.json</artifactId>
+            <version>${jakarta.json.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.4.2</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>3.3.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.10.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <description>Iron Ed25519Signature2020 Documentation</description>
+                    <doctitle>Iron Ed25519Signature2020 Documentation</doctitle>
+                    <header>
+                        <![CDATA[<br>Iron Ed25519Signature2020 v${project.version}]]>
+                    </header>
+                    <failOnWarnings>false</failOnWarnings>
+                    <additionalOptions>
+                        <additionalOption>-Xdoclint:none</additionalOption>
+                    </additionalOptions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.12</version>
+                <executions>
+                    <execution>
+                        <id>default-prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.0</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.5.0</version>
+            </plugin>
+        </plugins>
+    </build>
+
+
+    <profiles>
+        <profile>
+            <id>maven-central</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>3.2.7</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                                <configuration>
+                                    <signer>bc</signer>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.7.0</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+            <distributionManagement>
+                <snapshotRepository>
+                    <id>ossrh</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 </project>
